[gd_scene load_steps=2 format=3 uid="uid://cyk4swevtgipl"]

[ext_resource type="Script" path="res://~test/demo_2.gd" id="1_ilq0x"]

[node name="Demo2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ilq0x")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FlowContainer" type="FlowContainer" parent="ScrollContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="tc-10" type="Button" parent="ScrollContainer/BoxContainer/FlowContainer"]
layout_mode = 2
text = "test drop item - 10"

[node name="tc-50" type="Button" parent="ScrollContainer/BoxContainer/FlowContainer"]
layout_mode = 2
text = "test drop item - 50"

[node name="tc-100" type="Button" parent="ScrollContainer/BoxContainer/FlowContainer"]
layout_mode = 2
text = "test drop item - 100"

[connection signal="button_up" from="ScrollContainer/BoxContainer/FlowContainer/tc-10" to="." method="_on_tc_10_button_up"]
[connection signal="button_up" from="ScrollContainer/BoxContainer/FlowContainer/tc-50" to="." method="_on_tc_50_button_up"]
[connection signal="button_up" from="ScrollContainer/BoxContainer/FlowContainer/tc-100" to="." method="_on_tc_100_button_up"]
